# locwork

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
locwork/: calendar.py  cli.py  interactive.py  logs.py  main.py  models.py  statpage.py
python/: README.md  pyproject.toml
python/locwork/: cli.py  locations.py  logs.py  main.py  statpage.py
rust/: .gitignore  Cargo.toml  README.md  dev.db
rust/migrations/: 00_init_db.sql  init_db.sql
rust/src/: main.rs  store.rs
rust/src/panels/: actions.rs  calendar_panel.rs  debug_panel.rs  debugpanel.rs  list_picker.rs  location_modal.rs  location_panel.rs  locationpanel.rs  mod.rs  modal.rs  panel.rs  record_modal.rs  textfield_component.rs
rust/src/store/: connection.rs  mod.rs  models.rs
scripts/: generateMockData.ts
src/: app.html  calendar.py  models.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src/lib/: dataStore.ts  models.ts  utils.ts
src/lib/components/: Calendar.svelte  CalendarCell.svelte
src/routes/: +page.svelte  +page.ts
src/routes/day/[date]/: +page.svelte
src/routes/month/[month]/: +page.svelte  +page.ts
