[package]
name = "locwork"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.31"
ratatui = "0.29.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "tls-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
