[package]
name = "locwork"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "time", "tls-native-tls"] }
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
